added a media screen to the header

--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -6,3 +6,7 @@
     --color-brand-light: #CFCFBC;
     --color-secondary-dark: #A18268;
 }
+
+$bp-mobile: 480px;
+$bp-tablet: 768px;
+$bp-desktop: 1280px;
