--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -2,13 +2,18 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding-top: 32px;
+    padding-top: 16px;
     width: 100%;
+
+    @media screen and (min-width: $bp-desktop) {
+        padding-top: 32px;
+    }
 
     &__container {
         display: flex;
         align-items: center;
         gap: 40px;
+
     }
 
     &__nav {
