--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,45 +15,29 @@
 
 @import './layouts/container';
 
-
-/*Advantages section*/
 @import './layouts/advantages-section';
 
 
-
-/* traditions-section*/
 @import './layouts/tradition-sectin';
 
-/*Chefs section*/
+
 @import './layouts/chefs-section';
 
 
 @import './components/chef-card';
 
-
-/*Format section*/
 @import './layouts/formats-section';
 
 @import './components/_format-card.scss';
 
-
-/*Carousel*/
 @import './components/carousel-button';
 
-
-/*Contact Section*/
 @import './layouts/contact-section';
 
-/*Footer*/
 @import './layouts/footer';
 
-
-
-/*Modal*/
-
 @import './layouts/modal';
-
-/*Form*/
+@import './layouts/mobile-menu';
 
 @import './components/input';
 @import './layouts/forms-terms';
