--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -36,6 +36,12 @@ p {
     margin-top: 0;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 a {
     display: inline-block;
 }
