--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -2,16 +2,25 @@
     &__title {
         /*max-width:520px*/
         position: relative;
-        margin: 0 auto 80px;
+        margin: 0 auto 24px;
+
+        @media screen and (min-width:$bp-desktop) {
+            margin-bottom: 80px;
+        }
 
         &::before,
         &::after {
+            display: none;
             position: absolute;
             bottom: 24px;
             display: block;
             width: 325px;
             border: 2px solid var(--color-brand-light);
             content: '';
+
+            @media screen and (min-width:$bp-desktop) {
+                display: block;
+            }
         }
 
         &::before {
@@ -27,11 +36,20 @@
 
     &__list {
         display: flex;
-        gap: 40px 30px;
+        gap: 20px;
         flex-grow: wrap;
+        flex-direction: column;
+
+        @media screen and (min-width:$bp-tablet) {
+            gap: 40px 30px;
+            flex-direction: row;
+        }
     }
 
     &__item {
-        flex-basis: calc((100% - 30px) / 2);
+
+        @media screen and (min-width:$bp-tablet) {
+            flex-basis: calc((100% - 30px) / 2);
+        }
     }
 }
