--- a/scss/components/_format-card.scss
+++ b/scss/components/_format-card.scss
@@ -14,6 +14,11 @@
     overflow: hidden;
     transition: transform 0.3s;
 
+    &:hover {
+        transform: scale(1.05);
+
+    }
+
     &__image {
         position: absolute;
         z-index: -1;
@@ -24,13 +29,6 @@
         border-radius: 16px;
 
     }
-
-    &__:hover {
-        transform: scale(1.05);
-
-    }
-
-
 
     &__title {
         font-size: 24px;
