added  media screen for footer, and finished our project

--- a/scss/components/_carousel-button.scss
+++ b/scss/components/_carousel-button.scss
@@ -12,15 +12,14 @@
     padding: 0;
     cursor: pointer;
 
-}
+    &:hover {
+        background-color: var(--color-primary-dark);
+        fill: var(--color-primary-light)
+    }
 
+    &.next {
+        transform: rotate(180deg);
 
-.carousel-button:hover {
-    background-color: var(--color-primary-dark);
-    fill: var(--color-primary-light)
-}
-
-.carousel-button.next {
-    transform: rotate(180deg);
+    }
 
 }
