--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@
 @import './components/_format-card.scss';
 
 @import './components/carousel-button';
+@import './components/pagination';
 
 @import './layouts/contact-section';
 
