--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+
     padding: 32px 0;
     position: relative;
     background-image: url(../images/footer-background.png);
@@ -6,73 +7,92 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    &::before,
+    &::after {
+        position: absolute;
+        bottom: 0;
+        content: '';
+    }
+
+    &::before {
+        width: 180px;
+        height: 120px;
+        left: 0;
+        background-image: url('../images/decor-bread-small.png');
+    }
+
+    &::after {
+        width: 380px;
+        height: 190px;
+        right: 0;
+        background-image: url('../images/decor-bread-large.png');
+
+    }
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        @media screen and (min-width:$bp-tablet) {
+            flex-basis: 50%;
+            flex-direction: row;
+        }
+    }
+
+    &__nav,
+    &__address {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+
+        gap: 20px;
+
+        @media screen and (min-width:$bp-tablet) {
+            flex-basis: 50%;
+            flex-direction: row;
+            text-align: left;
+
+        }
+    }
+
+    &__logo,
+    &__menu {
+        flex-grow: 1;
+    }
+
+    &__address-list,
+    &__address-info {
+        flex-grow: 1;
+
+    }
+
+    &__address-link {
+        font-size: 16px;
+        font-weight: 300;
+        color: var(--color-primary-light);
+        text-decoration: none;
+    }
+
+    &__address-link:hover {
+        color: var(--color-brand-normal)
+    }
+
+    &__address-icon {
+        fill: var(--color-primary-light);
+    }
+
+    &__address-icon:hover {
+        fill: var(--color-brand-normal);
+    }
+
+    &__address-copyright {
+        font-size: 14px;
+    }
 }
 
-.footer::before,
-.footer::after {
-    position: absolute;
-    bottom: 0;
-    content: '';
-}
 
-.footer::before {
-    width: 180px;
-    height: 120px;
-    left: 0;
-    background-image: url('../images/decor-bread-small.png');
-}
 
-.footer::after {
-    width: 380px;
-    height: 190px;
-    right: 0;
-    background-image: url('../images/decor-bread-large.png');
-
-}
-
-.footer-container {
-    display: flex;
-    gap: 20px;
-}
-
-.footer-nav,
-.footer-address {
-    display: flex;
-    flex-basis: 50%;
-    gap: 20px;
-}
-
-.footer-logo,
-.footer-menu {
-    flex-grow: 1;
-}
 
 /*я не знаю куди його*/
-.address-list,
-.address-info {
-    flex-grow: 1;
-
-}
-
-.address-link {
-    font-size: 16px;
-    font-weight: 300;
-    color: var(--color-primary-light);
-    text-decoration: none;
-}
-
-.address-link:hover {
-    color: var(--color-brand-normal)
-}
-
-.address-icon {
-    fill: var(--color-primary-light);
-}
-
-.address-icon:hover {
-    fill: var(--color-brand-normal);
-}
-
-.address-copyright {
-    font-size: 14px;
-}
