--- a/scss/layouts/_formats-section.scss
+++ b/scss/layouts/_formats-section.scss
@@ -13,4 +13,16 @@
         overflow: hidden;
     }
 
+    &__list {
+        margin-bottom: 32px;
+    }
+
+    &__button {
+        display: none;
+
+        @media screen and (min-width:$bp-tablet) {
+            display: flex;
+        }
+    }
+
 }
